Fixed element overflow issues, added new favicon, and added lightbox functionality to the project photos.

--- a/css/styles.css
+++ b/css/styles.css
@@ -618,8 +618,8 @@ video {
   bottom: -1rem;
 }
 
-.-bottom-\[150px\] {
-  bottom: -150px;
+.-bottom-\[200px\] {
+  bottom: -200px;
 }
 
 .-left-\[150px\] {
@@ -919,6 +919,10 @@ video {
   max-width: 400px;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
 .max-w-md {
   max-width: 28rem;
 }
@@ -1010,6 +1014,10 @@ video {
 
 .gap-px {
   gap: 1px;
+}
+
+.overflow-clip {
+  overflow: clip;
 }
 
 .truncate {
@@ -1109,9 +1117,35 @@ video {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.from-stone-200 {
-  --tw-gradient-from: #e7e5e4 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(231 229 228 / 0) var(--tw-gradient-to-position);
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-bl {
+  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
+}
+
+.from-teal-100 {
+  --tw-gradient-from: #ccfbf1 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(204 251 241 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\] {
+  --tw-gradient-from:  var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#30cfd0\] {
+  --tw-gradient-from: #30cfd0 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(48 207 208 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#fff1eb\] {
+  --tw-gradient-from: #fff1eb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 241 235 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -1119,21 +1153,45 @@ video {
   --tw-gradient-from-position: 30%;
 }
 
-.via-stone-300 {
-  --tw-gradient-to: rgb(214 211 209 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #d6d3d1 var(--tw-gradient-via-position), var(--tw-gradient-to);
+.from-50\% {
+  --tw-gradient-from-position: 50%;
+}
+
+.from-80\% {
+  --tw-gradient-from-position: 80%;
+}
+
+.from-70\% {
+  --tw-gradient-from-position: 70%;
+}
+
+.via-teal-300 {
+  --tw-gradient-to: rgb(94 234 212 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #5eead4 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .via-60\% {
   --tw-gradient-via-position: 60%;
 }
 
-.to-sky-100 {
-  --tw-gradient-to: #e0f2fe var(--tw-gradient-to-position);
+.to-teal-400 {
+  --tw-gradient-to: #2dd4bf var(--tw-gradient-to-position);
+}
+
+.to-\[\#330867\] {
+  --tw-gradient-to: #330867 var(--tw-gradient-to-position);
+}
+
+.to-\[\#ace0f9\] {
+  --tw-gradient-to: #ace0f9 var(--tw-gradient-to-position);
 }
 
 .to-80\% {
   --tw-gradient-to-position: 80%;
+}
+
+.to-100\% {
+  --tw-gradient-to-position: 100%;
 }
 
 .fill-\[currentColor\] {
@@ -1333,6 +1391,11 @@ video {
 .text-slate-400 {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
+.text-slate-600 {
+  --tw-text-opacity: 1;
+  color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
 .text-teal-100 {
@@ -1537,16 +1600,6 @@ body::-webkit-scrollbar-thumb{
   width: 4rem;
 }
 
-.group\/link:hover .group-hover\/link\:-translate-y-1 {
-  --tw-translate-y: -0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group\/link:hover .group-hover\/link\:translate-x-1 {
-  --tw-translate-x: 0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .group:hover .group-hover\:-translate-y-1 {
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1575,6 +1628,11 @@ body::-webkit-scrollbar-thumb{
   fill: url('#rocket-gradient');
 }
 
+.group:hover .group-hover\:text-cyan-300 {
+  --tw-text-opacity: 1;
+  color: rgb(103 232 249 / var(--tw-text-opacity));
+}
+
 .group:hover .group-hover\:text-slate-100 {
   --tw-text-opacity: 1;
   color: rgb(241 245 249 / var(--tw-text-opacity));
@@ -1590,12 +1648,12 @@ body::-webkit-scrollbar-thumb{
   width: 4rem;
 }
 
-.group\/link:focus-visible .group-focus-visible\/link\:-translate-y-1 {
+.group:focus-visible .group-focus-visible\:-translate-y-1 {
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group\/link:focus-visible .group-focus-visible\/link\:translate-x-1 {
+.group:focus-visible .group-focus-visible\:translate-x-1 {
   --tw-translate-x: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1625,6 +1683,11 @@ body::-webkit-scrollbar-thumb{
   color: rgb(241 245 249 / var(--tw-text-opacity));
 }
 
+.group:focus-visible .group-focus-visible\:text-teal-300 {
+  --tw-text-opacity: 1;
+  color: rgb(94 234 212 / var(--tw-text-opacity));
+}
+
 @media (prefers-reduced-motion: reduce) {
   .motion-reduce\:transition-none {
     transition-property: none;
@@ -1648,8 +1711,16 @@ body::-webkit-scrollbar-thumb{
     height: 50%;
   }
 
+  .sm\:h-\[600px\] {
+    height: 600px;
+  }
+
   .sm\:w-1\/2 {
     width: 50%;
+  }
+
+  .sm\:w-\[600px\] {
+    width: 600px;
   }
 
   .sm\:flex-row {
@@ -1754,14 +1825,6 @@ body::-webkit-scrollbar-thumb{
   .lg\:-inset-x-6 {
     left: -1.5rem;
     right: -1.5rem;
-  }
-
-  .lg\:-left-10 {
-    left: -2.5rem;
-  }
-
-  .lg\:-top-10 {
-    top: -2.5rem;
   }
 
   .lg\:top-0 {
@@ -1895,11 +1958,6 @@ body::-webkit-scrollbar-thumb{
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-slate-600 {
-    --tw-text-opacity: 1;
-    color: rgb(71 85 105 / var(--tw-text-opacity));
   }
 
   .lg\:opacity-0 {
